[package]
name = "tower-grpc"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]

[features]
default = ["protobuf"]
protobuf = ["prost"]

[workspace]
members = [
  "tower-grpc-build",
  "tower-grpc-examples",
]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
h2 = { git = "https://github.com/carllerche/h2" }
log = "0.3"
tower = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2", branch = "connection-handshake" }

# For protobuf
prost = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.4"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-core = "0.1"

# For examples
prost = "0.2"
prost-derive = "0.2"

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }