[package]
name = "tower-grpc"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "Eliza Weisman <eliza@buoyant.io>",
]

[features]
default = ["protobuf"]
protobuf = ["prost"]

[workspace]
members = [
  "tower-grpc-build",
  "tower-grpc-examples",
  "tower-grpc-interop",

  # For tests
  "tests/multifile",
  "tests/collide",
]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
h2 = "0.1"
log = "0.3"
tower = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }

# For protobuf
prost = { git = "https://github.com/danburkert/prost", optional = true }

[dev-dependencies]
env_logger = "0.4"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-core = "0.1"

# For examples
prost = { git = "https://github.com/danburkert/prost" }
prost-derive = { git = "https://github.com/danburkert/prost" }

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }
