[package]
name = "tower-grpc"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "Eliza Weisman <eliza@buoyant.io>",
]
license = "MIT"

[features]
default = ["protobuf"]
protobuf = ["prost"]

[workspace]
members = [
  "tower-grpc-build",
  "tower-grpc-examples",
  "tower-grpc-interop",

  # For tests
  "tests/multifile",
  "tests/collide",
  "tests/name-case",
  "tests/unused-imports",
]

[dependencies]
bytes = "0.4.7"
futures = "0.1"
http = "0.1"
h2 = "0.1"
log = "0.4"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-service = { git = "https://github.com/tower-rs/tower" }

# For protobuf
prost = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-core = "0.1"

# For examples
prost = "0.3"
prost-derive = "0.3"
