[package]
name = "tower-grpc-build"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"

[dependencies]
codegen = { git = "https://github.com/carllerche/codegen" }
prost-build = "0.4"
heck = "0.3"

[features]
default = ["tower-h2", "hyper-body"]
tower-h2 = []
hyper-body = []
