[package]
name = "tower-grpc-examples"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "metadata-server"
path = "src/metadata/server.rs"

[[bin]]
name = "metadata-client"
path = "src/metadata/client.rs"

[[bin]]
name = "route-guide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "route-guide-client"
path = "src/routeguide/client.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-grpc = { path = "../tower-grpc", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

# For the routeguide example
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build",  features = ["tower-hyper"]  }
