[package]
name = "tower-grpc-examples"
version = "0.1.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "metadata-server"
path = "src/metadata/server.rs"

[[bin]]
name = "metadata-client"
path = "src/metadata/client.rs"

[[bin]]
name = "route-guide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "route-guide-client"
path = "src/routeguide/client.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { path = "../tower-grpc", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

# For the routeguide example
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build",  features = ["tower-hyper"]  }
