[package]
name = "tower-grpc-interop"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.23"
bytes = "0.4"
pretty_env_logger = "0.2"
log = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio-core = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { path = "../" }
tower-service = { git = "https://github.com/tower-rs/tower" }

clap = "~2.29"
console = "0.5.0"
rustls = "0.11.0"
domain = "0.2.2"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }
