[package]
name = "tower-grpc-interop"
version = "0.0.1"
edition = "2018"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"
publish = false

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
futures = "0.1.23"
bytes = "0.4"
pretty_env_logger = "0.2"
log = "0.4"
http = "0.1"
prost = "0.5"
tokio-core = "0.1"
tokio = "0.1"
tower-hyper = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { path = "../tower-grpc" }
tower = "0.1"
http-connection = "0.1"

clap = "2.33.0"
console = "0.7"
rustls = "0.15.0"
domain = "0.2.2"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build", features = ["tower-hyper"] }
