[package]
name = "tower-grpc"
version = "0.1.0"
edition = "2018"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "Eliza Weisman <eliza@buoyant.io>",
]
license = "MIT"

[features]
default = ["protobuf"]
protobuf = ["prost"]

[dependencies]
base64 = "0.10"
bytes = "0.4.7"
futures = "0.1"
http = "0.1.14"
h2 = "0.1.11"
log = "0.4"
percent-encoding = "1.0.1"
tower-hyper = { git = "http://github.com/tower-rs/tower-hyper", optional = true }
http-body = "0.1"
tower-service = "0.2"
tower-util = "0.1"

# For protobuf
prost = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-core = "0.1"

# For examples
prost = "0.5"
