[package]
name = "tower-grpc"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
edition = "2018"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower-grpc"
homepage = "https://github.com/tower-rs/tower-grpc"
documentation = "https://docs.rs/tower-grpc/0.1.0"
description = """
A client and server gRPC implementation based on Tower.
"""

[features]
default = ["protobuf"]
protobuf = ["prost"]

[dependencies]
base64 = "0.10"
bytes = "0.4.7"
futures = "0.1"
http = "0.1.14"
h2 = "0.1.11"
log = "0.4"
percent-encoding = "1.0.1"
tower-hyper = { version = "0.1", optional = true }
http-body = "0.1"
tower-service = "0.2"
tower-util = "0.1"

# For protobuf
prost = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
tokio-core = "0.1"

# For examples
prost = "0.5"
