[package]
name = "multifile"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
bytes = "0.4"
prost = "0.3"
prost-derive = "0.3"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-grpc = { path = "../../" }

[build-dependencies]
tower-grpc-build = { path = "../../tower-grpc-build" }
