[package]
name = "multifile"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
bytes = "0.4"
prost = "0.5"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-grpc = { path = "../../tower-grpc", features = ["tower-hyper"] }

[build-dependencies]
tower-grpc-build = { path = "../../tower-grpc-build", features = ["tower-hyper"] }
