[package]
name = "name-case"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
publish = false

[dependencies]
bytes = "0.4"
prost = "0.5"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-grpc = { path = "../../tower-grpc" }

[build-dependencies]
tower-grpc-build = { path = "../../tower-grpc-build" }

